# sengent

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: local-ollama-environment.md  project-context.md  sengent-maintainer-guide.en.md  sengent-maintainer-guide.md  sengent-user-guide.en.md  sengent-user-guide.md
knowledge/: README.md
scripts/: adversarial_support_drill.py  high_intensity_support_drill.py  install_sengent.sh  package_release.sh  pilot_closed_loop.py  pilot_readiness_eval.py
sentieon-note/: README.md  external-error-associations.json  external-error-reference.md  external-format-guides.json  external-format-reference.md  external-tool-guides.json  external-tool-reference.md  incident-memory.json  sentieon-chinese-reference.md  sentieon-doc-map.md  sentieon-github-map.md  sentieon-module-index.md  sentieon-modules.json  sentieon-script-index.md  thread-019d5249-summary.md  workflow-guides.json
tests/: conftest.py  test_adversarial_sessions.py  test_answering.py  test_app_paths.py  test_boundary_pack.py  test_chat_ui.py  test_classifier.py  test_cli.py  test_config.py  test_dataset_export.py  test_docs_contract.py  test_doctor.py  test_eval_trace_plane.py  test_extractor.py  test_factory_model.py  test_feedback_runtime.py  test_gap_intake.py  test_gap_review.py  test_incident_memory.py  test_install_script.py  test_integration_local.py  test_knowledge_build.py  test_knowledge_review.py  test_llm_backends.py  test_module_index.py  test_pack_contract.py  test_pack_runtime.py  test_package_release_script.py  test_packaging_contract.py  (+19 more)
(+158 files in other folders)
