[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentieon-assist"
version = "0.1.0"
description = "Offline Sentieon support harness"
requires-python = ">=3.11"

[project.scripts]
sentieon-assist = "sentieon_assist.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentieon_assist = ["knowledge/base/*.json"]
